# alchemical_weather_smth

./: .gitignore  README.md  pyproject.toml
tests/: synthetic_server.py  test_database.py  test_weather_app.py  Ростов-на-Дону.json  Убуд.json
weatherapp/: database_config.py  main.py  orm_runner.py
